infrastructure/manifests/mqtt/linkerd-policy.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-iot-system-to-mosquitto
  namespace: iot-system
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: mosquitto-mqtt
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: iot-system-meshed-clients
